# reporting-service

./: Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: build-reporting-service.yml
config/: reporting_config.yaml
reporting_service/: __init__.py  analyzer.py  config.py  metrics.py  runner.py
reporting_service/analysis/: __init__.py  deviation_analyzer.py  exit_classifier.py  rule_evaluator.py  signal_outcome_analyzer.py  signal_price_tracker.py
reporting_service/data/: __init__.py  journal_repository.py  market_data.py  rules_client.py  stock_service_client.py
reporting_service/models/: __init__.py  analysis.py  position.py  signal_analysis.py
reporting_service/reports/: __init__.py  generator.py
tests/: __init__.py  conftest.py  test_analysis.py  test_deviation_analyzer.py  test_exit_classifier_extended.py  test_models.py  test_models_extended.py  test_reports.py  test_rule_evaluator_extended.py  test_signal_outcome.py  test_signal_price_tracker.py
